增加学生动态功能

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -362,6 +362,7 @@
 							events.openNewWindow('app_keeprecord.html');
 							break;
 						case "2": //充值
+						    events.openNewWindow('../quan/studentdynamic_main.html');
 							break;
 						case "3": //作业批改
 						events.openNewWindow('../homework/homework-tea.html')
