--- a/JiaoBaoYun-hb/html/cloud/keeprecord_history_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_history_sub.html
@@ -8,6 +8,25 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css">
+		<link rel="stylesheet" href="../../css/utils/common.css" />
+		<script src="../../js/mui.min.js"></script>
+		<style>
+			body,
+			.mui-content {
+				background: white;
+			}
+
+			.mui-table-view:before,
+			.mui-table-view:after,
+			.mui-table-view-cell:after {
+				height: 0px;
+			}
+
+			.mui-media-body {
+				background: #F2F2F2;
+				padding: 10px;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -15,12 +34,73 @@
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<!--数据列表-->
-				<ul class="mui-table-view mui-table-view-chevron">
-
+				<ul class="mui-table-view">
+					<ul class="mui-table-view">
+						<li class="mui-table-view-cell">
+							<h3 style="color: black;">2016-11-22</h3>
+							<div class="mui-row">
+								<div class="mui-col-sm-3 mui-col-xs-3" style="text-align: center;margin-top: 9px;">
+									<img style="width: 48px;height: 48px;border-radius:50% ;" src="../../image/clip/u292.png" />
+								</div>
+								<div class="mui-col-sm-9 mui-col-xs-9">
+									<div class="mui-media-body">
+										<div class="mui-pull-right"style="margin: 6px;">8:30</div>
+										<h4 style="">艾叶子迟到</h4>
+										<div>说明：路上堵车</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<h3 style="color: black;"></h3>
+							<div class="mui-row">
+								<div class="mui-col-sm-3 mui-col-xs-3" style="text-align: center;margin-top: 9px;">
+									<!--<img style="width: 48px;height: 48px;border-radius:50% ;" src="../../image/clip/u292.png" />-->
+								</div>
+								<div class="mui-col-sm-9 mui-col-xs-9">
+									<div class="mui-media-body">
+										<div class="mui-pull-right"style="margin: 6px;">8:30</div>
+										<h4 style="">艾叶子迟到</h4>
+										<div>说明：路上堵车</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<h3 style="color: black;">2016-11-21</h3>
+							<div class="mui-row">
+								<div class="mui-col-sm-3 mui-col-xs-3" style="text-align: center;margin-top: 9px;">
+									<img style="width: 48px;height: 48px;border-radius:50% ;" src="../../image/clip/u292.png" />
+								</div>
+								<div class="mui-col-sm-9 mui-col-xs-9">
+									<div class="mui-media-body">
+										<div class="mui-pull-right"style="margin: 6px;">8:30</div>
+										<h4 style="">艾叶子迟到</h4>
+										<div>说明：路上堵车</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<h3 style="color: black;"></h3>
+							<div class="mui-row">
+								<div class="mui-col-sm-3 mui-col-xs-3" style="text-align: center;margin-top: 9px;">
+									<!--<img style="width: 48px;height: 48px;border-radius:50% ;" src="../../image/clip/u292.png" />-->
+								</div>
+								<div class="mui-col-sm-9 mui-col-xs-9">
+									<div class="mui-media-body">
+										<div class="mui-pull-right"style="margin: 6px;">8:30</div>
+										<h4 style="">艾叶子迟到</h4>
+										<div>说明：路上堵车</div>
+									</div>
+								</div>
+							</div>
+						</li>
+					</ul>
 				</ul>
 			</div>
 		</div>
-		<script src="../../js/mui.min.js"></script>
+
 		<script>
 			mui.init({
 				pullRefresh: {
