--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -243,7 +243,7 @@
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 										console.log('登录保存的个人信息：'+JSON.stringify(tempInfo))
 										//跳到主界面
-										events.openNewWindowWithData('../../html/index.html', '');
+										events.openNewWindowWithData('../index/index.html', '');
 									} else {
 										mui.toast(data.RspTxt);
 									}
